# Publicly visible alias to the test storage targets.
load("@build_bazel_rules_android//android:rules.bzl", "android_library")
load("//build_extensions:axt_versions.bzl", "SERVICES_STORAGE_ARTIFACT")

licenses(["notice"])

# AndroidX Test storage API.
android_library(
    name = "storage",
    tags = [
        "maven_coordinates=%s" % SERVICES_STORAGE_ARTIFACT,
    ],
    visibility = ["//visibility:public"],
    exports = ["//services/storage/java/androidx/test/services/storage"],
)

# Constants shared between on-device (android) and host-side (java code) testing
# infrastructure for the storage service.
java_library(
    name = "storage_constants",
    visibility = ["//visibility:public"],
    exports = ["//services/storage/java/androidx/test/services/storage:test_storage_constants"],
)
