load("//build_extensions:maven_artifact.bzl", "maven_artifact")
load("//build_extensions:axt_maven_apk.bzl", "axt_maven_apk")
load("//build_extensions:axt_versions.bzl", "ORCHESTRATOR_ARTIFACT", "SERVICES_APK_ARTIFACT")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

# Dummy app to allow the On Device Orchestration to run and execute.
android_binary(
    name = "stubapp",
    srcs = ["src/androidx/test/orchestrator/Orchestrator.java"],
    custom_package = "androidx.test.orchestrator.stubapp",
    manifest = "src/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//runner/android_junit_runner",
        "//runner/android_test_orchestrator",
        "@maven//:junit_junit",
    ],
)

axt_maven_apk(
    name = "orchestrator_release_apk",
    artifact = ORCHESTRATOR_ARTIFACT,
    included_dep = ":stubapp",
    maven_deps = [
        SERVICES_APK_ARTIFACT,
    ],
)

maven_artifact(
    name = "orchestrator_release_maven_artifact",
    last_updated = "20170622000000",
    target = ":orchestrator_release_apk",
)
