# Copyright 2017 Google Inc. All Rights Reserved.
#
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = [
        "//tools/android/proto:__pkg__",
        "//tools/device_broker:__subpackages__",
    ],
)

licenses(["notice"])  # Apache 2.0

proto_library(
    name = "test_info_pb",
    srcs = ["test_info.proto"],
)

java_proto_library(
    name = "test_info_pb_java_proto",
    strict_deps = 0,
    deps = [":test_info_pb"],
)
